# py-bit-torrent

./: README.md  REPORT.md  pyproject.toml  pyrightconfig.json
bit_torrent/src/client/: client.py
bit_torrent/src/router/: router_Dockerfile
bit_torrent/src/server/: archivo.torrent  server.py  server_Dockerfile
protocol/: client.py  main.py  swarm.py
py_bit_torrent/: bencode.py  parse_torrent.py  torrent.py
py_bit_torrent/protocol/: client.py  main.py  peer.py  peer_socket.py  peer_wire_messages.py  swarm.py  torrent.py  torrent_file_handler.py
py_bit_torrent/protocol/kademlia/: __init__.py  crawling.py  network.py  node.py  protocol.py  routing.py
py_bit_torrent/src/: base_Dockerfile
py_bit_torrent/src/client/: client_Dockerfile  entrypoint.sh
py_bit_torrent/src/client_network_1/: client_network_1_Dockerfile  entrypoint.sh
py_bit_torrent/src/client_network_2/: client_network_2_Dockerfile  entrypoint.sh
py_bit_torrent/src/gui/: main.py
py_bit_torrent/src/router/: setup_infra.bat  setup_infra.sh  startup.sh
py_bit_torrent/src/router/router/: route.sh  router.Dockerfile  router_base.Dockerfile
py_bit_torrent/src/server/: entrypoint.sh  server.py  server_Dockerfile
src/client/: client_Dockerfile  entrypoint.sh
src/server/: entrypoint.sh
tests/: test_bencode.py  test_dht_real.py  test_dht_torrent.py
