[tool.poetry]
name = "py-bit-torrent"
version = "0.1.0"
description = "A simple bit torrent client writtent in python"
authors = ["Rafael Acosta <theGitNoob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
