[tool.poetry]
name = "py-bit-torrent"
version = "0.1.0"
description = "A simple bit torrent client writtent in python"
authors = ["Rafael Acosta <theGitNoob@gmail.com>", "Eisler F. Valles Rodríguez <mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
typer = "^0.15.1"
bencodepy = "^0.9.5"
beautifultable = "^1.1.0"
requests = "^2.32.3"
rpcudp = "^5.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.25.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
